[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbunker"
version = "0.2.0"
description = "Python SDK for Moltbunker - Permissionless P2P Container Runtime for AI Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Moltbunker Team", email = "team@moltbunker.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["moltbunker", "p2p", "containers", "ai", "agents", "blockchain", "decentralized", "bunker"]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
wallet = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
]
ws = [
    "websockets>=11.0",
]
full = [
    "moltbunker[wallet,ws]",
]
dev = [
    "moltbunker[full]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://moltbunker.com"
Documentation = "https://moltbunker.com/docs/python-sdk"
Repository = "https://github.com/moltbunker/moltbunker-sdk"
Issues = "https://github.com/moltbunker/moltbunker-sdk/issues"
Changelog = "https://github.com/moltbunker/moltbunker-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["moltbunker*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
